--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,5 @@
 [user]
 	name = Makoto Sasaki
-	email = wanigoya@gmail.com
 [core]
 	editor = vim
 [color]
@@ -17,5 +16,6 @@
 	l  = log --abbrev-commit --date=iso --graph --pretty=format:'%C(red)%h %C(yellow)%d%C(green)%cd %C(blue)%cn\n%C(reset)%s\n'
 	lv = log --name-status --abbrev-commit --date=iso --graph --pretty=format:'%C(red)%h %C(yellow)%d%C(green)%cd %C(blue)%cn\n%C(reset)%s\n'
 	lm = log --no-merges --date=short --pretty='format:%C(yellow)%h %C(green)%cd %C(blue)%an%C(red)%d %C(reset)%s'
+	f  = fetch --prune
 [interactive]
 	singlekey = true
